--- a/style.css
+++ b/style.css
@@ -109,6 +109,11 @@ section ul li::before {
   font-size: 0.9rem;
 }
 
+img {
+  max-width: 100%;       /* 부모 폭 기준으로 크기 자동 조절 */
+  height: auto;          /* 비율 유지 */
+}
+
 /* 숨겨진 내용 */
 section ul li .content {
   display: none;
