--- a/style.css
+++ b/style.css
@@ -15,8 +15,13 @@ main {
 /* 헤더 */
 header {
   text-align: center;
-  background: #222;
+  background-image: url('main/img1.jpg');
   padding: 30px 0;
+  color: #66ccff;
+  text-shadow: 
+    0 0 2px #FF69B4,
+    0 0 5px #FF69B4,
+    0 0 10px #FF69B4;
 }
 
 /* 제목 깜빡이기 */
