--- a/style.css
+++ b/style.css
@@ -14,6 +14,13 @@ main {
   padding: 20px 10%;
 }
 
+a{
+  color: #cc33ff;
+  text-shadow:
+    0 0 2px #ff99ff,
+    0 0 5px #ff99ff,
+    0 0 10px #ff99ff;
+}
 /* 헤더 */
 header {
   text-align: center;
